--- a/cookbook/appetizers/adding-custom-css-wordpress.html
+++ b/cookbook/appetizers/adding-custom-css-wordpress.html
@@ -62,9 +62,9 @@
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
-                        <div class="dropdown-items">
+                        <div class="dropdown-items" class="selected">
                             <h2><a href="../demos.html">Class Demos</a></h2>
-                            <h2><a href="../appetizers.html">Tutorials</a></h2>
+                            <h2><a href="../appetizers.html" class="selected">Tutorials</a></h2>
                             <h2><a href="../troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
