--- a/cookbook/demos.html
+++ b/cookbook/demos.html
@@ -55,13 +55,13 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="more.html">
+                            <a href="more.html" class="selected">
                                 More
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="demos.html">Class Demos</a></h2>
+                            <h2><a href="demos.html" class="selected">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
                             <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
                         </div>
