--- a/cookbook/ingredients.html
+++ b/cookbook/ingredients.html
@@ -17,13 +17,13 @@
                 <div id="navLinks">
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="ingredients.html">
+                            <a href="ingredients.html" class="selected">
                                 HTML
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="ingredients.html">Elements</a></h2>
+                            <h2><a href="ingredients.html" class="selected">Elements</a></h2>
                             <h2><a href="ingredients-cheatsheet.html">Cheatsheet</a></h2>
                         </div>
                     </div>
