--- a/cookbook/recipes.html
+++ b/cookbook/recipes.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="recipes.html">
+                            <a href="recipes.html" class="selected">
                                 Layouts
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
