--- a/cookbook/seasonings.html
+++ b/cookbook/seasonings.html
@@ -29,13 +29,13 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="seasonings.html">
+                            <a href="seasonings.html" class="selected">
                                 CSS
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="seasonings.html">Properties</a></h2>
+                            <h2><a href="seasonings.html" class="selected">Properties</a></h2>
                             <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
                         </div>
                     </div>
