--- a/cookbook/troubleshooting.html
+++ b/cookbook/troubleshooting.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="more.html">
+                            <a href="more.html" class="selected">
                                 More
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
@@ -63,7 +63,7 @@
                         <div class="dropdown-items">
                             <h2><a href="demos.html">Class Demos</a></h2>
                             <h2><a href="appetizers.html">Tutorials</a></h2>
-                            <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
+                            <h2><a href="troubleshooting.html" class="selected">Troubleshooting</a></h2>
                         </div>
                     </div>
                 </div>
