--- a/cookbook/seasonings-cheatsheet.html
+++ b/cookbook/seasonings-cheatsheet.html
@@ -174,14 +174,14 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="seasonings.html">
+                            <a href="seasonings.html" class="selected">
                                 CSS
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
                         </h2>
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
-                            <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="seasonings-cheatsheet.html" class="selected">Cheatsheet</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
