--- a/cookbook/recipes.html
+++ b/cookbook/recipes.html
@@ -47,10 +47,10 @@
                             </a>
                         </h2>
                         <div class="dropdown-items">
-                            <h2><a href="recipes.html?category=page-layout">Page Layouts</a></h2>
-                            <h2><a href="recipes.html?category=content-layout">Content Layouts</a></h2>
-                            <h2><a href="recipes.html?category=navigation-layout">Navigation</a></h2>
-                            <h2><a href="recipes.html?category=miscellaneous">Miscellaneous</a></h2>
+                            <h2><a href="recipes.html?category=page-layout" id="page-layout">Page Layouts</a></h2>
+                            <h2><a href="recipes.html?category=content-layout" id="content-layout">Content Layouts</a></h2>
+                            <h2><a href="recipes.html?category=navigation-layout" id="navigation-layout">Navigation</a></h2>
+                            <h2><a href="recipes.html?category=miscellaneous" id="miscellaneous">Miscellaneous</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
