headings demo update

--- a/cookbook/meal-prep/headings/page0.html
+++ b/cookbook/meal-prep/headings/page0.html
@@ -4,12 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- 
+            These demos assume you're starting from a freshly
+            duplicated code-skeleton project; you should be 
+            starting with the basic HTML template.
+
             First, update the title from 'Document' to whatever
             is appropriate for the page (in this case, 'Headings
             Demo').
             
             It's very easy to forget to update this,
-            so I encourage students to make this the first thing
+            so I encourage everyone to make this the first thing
             they do whenever they work in a new HTML file.
             
             It has no visual difference on the page itself, but it will
