--- a/cookbook/meal-prep/headings/page1.html
+++ b/cookbook/meal-prep/headings/page1.html
@@ -8,9 +8,21 @@
     <body>
         <!-- 
             Then, add your first html element: an h1 heading.
-            Be sure to call out the individual parts of tags and elements, 
-            like triangle brackets, names, and opening/closing tags,
-            since most students are brand new to these terms and concepts 
+
+            Recall what you (should have) just learned about 
+            tags and elements:
+
+            The most basic tag structure is composed of 3 parts:
+            - a left triangle bracket (<)
+            - a tag name
+            - a right triangle bracket (>)
+
+            An element is (usually) composed of 3 parts as well
+            - an opening tag
+            - content (could be text, or HTML element(s))
+            - a closing tag
+
+            Observe these parts in the element we add below. 
         -->
         <h1>This is an example of heading level 1.</h1>
     </body>
