--- a/cookbook/meal-prep/headings/page2.html
+++ b/cookbook/meal-prep/headings/page2.html
@@ -8,8 +8,12 @@
     <body>
         <h1>This is an example of heading level 1.</h1>
         <!--
-            Next, add an h2, calling out the different components of
-            tags and elements once again, and also note the differences
+            Next, add an h2 element below the h1.
+            
+            Again, note the structure of the different tags
+            and the new element.
+            
+            Also note the differences in the preview
             between the h1 and h2 (primarily font-size, at this point)
         -->
         <h2>This is an example of heading level 2.</h2>
