--- a/cookbook/meal-prep/headings/page3.html
+++ b/cookbook/meal-prep/headings/page3.html
@@ -9,8 +9,9 @@
         <h1>This is an example of heading level 1.</h1>
         <h2>This is an example of heading level 2.</h2>
         <!--
-            Repeat for headings h3 - h6.
-            Call out that there are no heading levels after 6.
+            Repeat for heading elements h3 - h6.
+            
+            Note that there are no heading levels after 6.
             Yes, it's fairly arbitrary, but that's how it is.
         -->
         <h3>This is an example of heading level 3.</h3>
@@ -18,8 +19,8 @@
         <h5>This is an example of heading level 5.</h5>
         <h6>This is an example of heading level 6.</h6>
         <!--
-            After completing h6, call out the differences between
-            the heading levels (again, basically just font-size),
+            After completing h6, observe the differences between
+            the heading levels (again, mostly just font-size),
             but also note how there is margin (space) in between
             each heading. That's something you get for free by
             using headings, but not necessarily with other 
