text styling demo update

--- a/cookbook/meal-prep/text-styling/page1.html
+++ b/cookbook/meal-prep/text-styling/page1.html
@@ -8,9 +8,10 @@
     <body>
         <!--
             We'll start off with a basic paragraph (<p>) element.
-            HTML often uses tag names that are frustratingly
-            short compared to actual names ('p' compared to 
-            'paragraph'); that's one thing students will have
+            
+            HTML elements often use tag names that are frustratingly
+            short compared to their actual names ('p' compared to 
+            'paragraph'); that's one thing you'll just have
             to get used to.
         -->
         <p>This is my first paragraph</p>
