--- a/cookbook/meal-prep/text-styling/page2.html
+++ b/cookbook/meal-prep/text-styling/page2.html
@@ -10,7 +10,7 @@
         <!--
             Now we'll add another paragraph element, 
             but this time we're going to use the lorem
-            ipsum 'Emmet Abbreviation'.
+            ipsum 'Emmet Abbreviation' to give it content.
 
             Just start typing 'lorem' inside your paragraph,
             and you'll see the dropdown option.
