--- a/cookbook/meal-prep/text-styling/page3.html
+++ b/cookbook/meal-prep/text-styling/page3.html
@@ -8,7 +8,7 @@
     <body>
         <p>This is my first paragraph</p>
         <!--
-            To remedy this "dirty code", we're going to split the 
+            To clean up this "dirty code", we're going to split the 
             paragraph element across multiple lines, so that all
             of our code is visible at once.
         -->
@@ -34,13 +34,16 @@
             across multiple lines should be indented one level 
             to the right.
 
-            Brief aside: anything in between the opening and closing tags 
-            of an element are referred to as "children" of the element 
-            whose tags they are in between)
+            Important terminology: anything in between the opening and 
+            closing tags of an element are referred to as a "child" (or 
+            "children" if more than one) of the element whose tags they 
+            are in between
 
             Splitting long code across multiple lines and indenting
             children of an element are two best practices we really
-            want to hammer into the students.
+            want to hammer into your heads from the very beginning!
+
+            If you don't, YOU WILL LOSE POINTS on your assignments!
         -->
     </body>
 </html>
