--- a/cookbook/meal-prep/text-styling/page5.html
+++ b/cookbook/meal-prep/text-styling/page5.html
@@ -17,7 +17,8 @@
         <b>This is bolded text outside of a paragraph.</b>
         <i>This is italicized text outside of a paragraph</i>
         <!--
-            Now we'll add bold and italicized text inside of paragraphs
+            Now we'll add bold and italicized text elements
+            inside of paragraph elements
         -->
         <p>
             This is <b>bolded text</b> inside of a paragraph.
