--- a/cookbook/meal-prep/text-styling/page6.html
+++ b/cookbook/meal-prep/text-styling/page6.html
@@ -23,7 +23,8 @@
             This is <i>italicized text</i> inside of a paragraph.
         </p>
         <!--
-            Now we'll add super- and sub-script text inside of paragraphs
+            Now we'll add superscript elements and subscript 
+            elements with text inside of paragraphs
         -->
         <p>
             This is <sup>superscripted text</sup> inside of a paragraph.
