--- a/cookbook/meal-prep/text-styling/page7.html
+++ b/cookbook/meal-prep/text-styling/page7.html
@@ -32,8 +32,14 @@
             Finally, we'll add a couple more unusual HTML elements:
             the line break element (<br>) and horizontal rule element (<hr>).
 
-            These elements don't actually accept any children, and 
-            instead modify the formatting of the page.
+            These elements don't accept any children, and actually
+            break the convention we told you before about each HTML
+            element requiring an opening and closing tag: these only
+            require a single opening tag.
+
+            The line break element and horizontal rule elements
+            modify the formatting of the page, rather than
+            modifying any children.
         -->
         <p>
             This sentence has a line break <br> in the middle of it.
