--- a/cookbook/meal-prep/text-styling/page0.html
+++ b/cookbook/meal-prep/text-styling/page0.html
@@ -9,7 +9,7 @@
             Elements Demo').
             
             It's very easy to forget to update this,
-            so I encourage students to make this the first thing
+            so I encourage everyone to make this the first thing
             they do whenever they work in a new HTML file.
             
             It has no visual difference on the page itself, but it will
