--- a/cookbook/meal-prep/text-styling/page4.html
+++ b/cookbook/meal-prep/text-styling/page4.html
@@ -15,27 +15,30 @@
             aperiam.
         </p>
         <!--
-            Call out how there is margin (space) between our paragraph 
+            Notice how there is margin (space) between our paragraph 
             elements, similar to the heading (h1-h6) elements.  Most
             other HTML elements don't behave this way, as we'll see
             in a moment.
 
-            Next, we're going to use the bold and italics elements; in the
-            future, the students will learn better ways to style text in CSS,
-            but for the moment, styling elements like these are enough.
+            Next, we're going to use the bold and italics elements
+            (<b> for bold and <i> for italics).
 
-            First we'll show them how they behave outside of a paragraph.
+            In the future, the students will learn better ways to style 
+            text in CSS, but for the moment, using styling elements like 
+            these is enough.
 
-            Notice how they end up right next to each other.  That is because
-            the bold and italics elements (and most of the other styling 
-            elements) we'll learn today are "inline" elements, while the
-            paragraph is a "block" element.
-
-            We'll learn more about those terms in the future, but they're 
-            worth bringing up now.
+            First we'll illustrate how they behave outside of a paragraph.
         -->
         <b>This is bolded text outside of a paragraph.</b>
         <i>This is italicized text outside of a paragraph</i>
+        <!--
+            Notice how the elements end up right next to each other.  
+            That is because the bold and italics elements (and most of 
+            the other styling elements) are considered "inline" 
+            elements, while the paragraph is a "block" element.
 
+            We'll learn more about those terms in the future, but 
+            they're worth bringing up now.
+        -->
     </body>
 </html>
