lists demo update

--- a/cookbook/meal-prep/lists/page1.html
+++ b/cookbook/meal-prep/lists/page1.html
@@ -12,8 +12,8 @@
             matter where you put them on the page, or in relation
             to each other.
 
-            However, this is our first step into more advanced 
-            HTML elements that are meant to work together.
+            However, today's demo is our first step into more 
+            advanced HTML elements that are meant to work together.
 
             We're going to be demoing two different types of 
             HTML lists today, that utilize a child element
@@ -32,8 +32,8 @@
 
             Notice that nothing shows up on the page yet. That is
             because the <ol> element is a special type of container
-            that changes the behavior of the List Items we place 
-            inside of it (in just a moment).
+            that changes the behavior of the List Items we're going
+            to place inside of it (in just a moment).
         -->
     </body>
 </html>
