--- a/cookbook/meal-prep/lists/page2.html
+++ b/cookbook/meal-prep/lists/page2.html
@@ -7,19 +7,22 @@
     </head>
     <body>
         <!--
-            We'll start off by putting in one list item.
+            We'll start off by adding in one list item.
 
             Note again how we indent one level to the right,
             since we place the <li> element inside of the <ol>
             element's opening and closing tags.
 
             This is very important for writing clean code.
+
+            If you don't do this...YOU WILL LOSE POINTS
+            on your future assignments!
         -->
         <ol>
             <li>List Item 1</li>
         </ol>
         <!--
-            After writing it, notice how in the preview we can
+            After adding it, notice how in the preview we can
             see the text we put inside of the list item, but
             we also see a number in front of it.
 
