--- a/cookbook/meal-prep/lists/page5.html
+++ b/cookbook/meal-prep/lists/page5.html
@@ -19,15 +19,16 @@
         </p>
         <!--
             Ordered lists (<ol>) are typically used for content
-            that have some sort of inherent order, such as rankings
-            or steps to follow.
+            that have some sort of inherent order or numbering, 
+            such as rankings or steps to follow.
 
             So let's create one more ordered list demonstrating
             that concept, with a bit more practical example,
             by adding a heading in there too.
 
-            Students can add different content to their lists 
-            if they want to.
+            You can add different content to your list if you 
+            want, this is just an example of what might go into
+            an ordered list.
         -->
         <h5>How to Make Honey Muffins</h5>
         <ol>
