--- a/cookbook/meal-prep/lists/page6.html
+++ b/cookbook/meal-prep/lists/page6.html
@@ -45,14 +45,18 @@
 
             Let's try out another type of list: the Unordered List
             Element (<ul>).
+
+            First we'll add a heading element (just to separate things), 
+            and then the Unordered List Element.
         -->
+        <h5>My First Unordered List</h5>
         <ul>
 
         </ul>
         <!--
             Similar to the Ordered List, the Unordered List Element
             on its own doesn't do much; it's a special container
-            that will transform list item elements once we put
+            that will modify list item elements once we put
             them inside.
         -->
     </body>
