--- a/cookbook/meal-prep/lists/page7.html
+++ b/cookbook/meal-prep/lists/page7.html
@@ -40,6 +40,7 @@
                 Enjoy!
             </li>
         </ol>
+        <h5>My First Unordered List</h5>
         <!--
             Let's add our first list item element to our
             unordered list.
@@ -50,7 +51,8 @@
         <!--
             Notice how the list item behaves similar to when it
             was inside of an ordered list, but this time rather
-            than a number in front, it has a bullet.
+            than a number in front, it has what we call a bullet
+            (the little black circle next to the item).
 
             As its name implies, the "unordered" list assumes
             we don't care about the order of the elements inside
