--- a/cookbook/meal-prep/lists/page8.html
+++ b/cookbook/meal-prep/lists/page8.html
@@ -40,8 +40,9 @@
                 Enjoy!
             </li>
         </ol>
+        <h5>My First Unordered List</h5>
         <!--
-            Let's add a few more.
+            Let's add a few more list items.
         -->
         <ul>
             <li>List Item 1</li>
@@ -50,8 +51,9 @@
             <li>List Item 4</li>
         </ul>
         <!--
-            As before, each list item element has its own line,
-            because they are (still) "block" elements.
+            As before, each list item element gets its own line
+            in the preview, because they are (still) "block" 
+            elements.
 
             And like the first list item, each subsequent one
             has a bullet in front of it.
