--- a/cookbook/meal-prep/lists/page9.html
+++ b/cookbook/meal-prep/lists/page9.html
@@ -40,6 +40,7 @@
                 Enjoy!
             </li>
         </ol>
+        <h5>My First Unordered List</h5>
         <ul>
             <li>List Item 1</li>
             <li>List Item 2</li>
@@ -54,8 +55,8 @@
             grocery list.
 
             Let's go ahead and create our own shopping list
-            to wrap up this demo. Ask the students for things
-            to put in our class' collective shopping list!
+            to wrap up this demo. What would you include in
+            your shopping list?
         -->
         <h5>Our Class Shopping List</h5>
         <ul>
@@ -67,9 +68,29 @@
             <li>Pretzels</li>
         </ul>
         <!--
-            After completing the demo, rehash the idea that
-            certain HTML elements are only supposed to be used
-            inside of (or as children of) other HTML elements.
+            With that, we're done with this demo. What did we learn?
+
+            Well, we learned about ordered and unordered lists,
+            but we also learned some higher level concepts too.
+
+            - Elements that have other elements in between their
+            opening and closing tags are referred to as "parents",
+            or also "containers".
+
+            - Elements that are in between the opening and closing
+            tags of "parents" are referred to as "children", or
+            also "items"; they should be indented relative to
+            the parent.
+
+                In other words, 
+                    "parents" are the same as "containers", 
+                    and
+                    "children" are the same as "items".
+
+            - Some "container" elements are special, and modify
+            the "items" inside of them.  And some "item" elements
+            are special, and should only be used inside of their
+            matching "container" elements.
 
             The ordered list (<ol>) and unordered list (<ul>)
             elements work together with list item (<li>) elements
@@ -79,9 +100,7 @@
             that's not how their meant to be used, and you'll 
             probably get some unexpected behavior as a result.
 
-            Tell students to keep that in mind, as if we see 
-            examples of code like this (written improperly),
-            students will lose points on their assignments.
+            And also, if you do...YOU WILL LOSE POINTS!
         -->
     </body>
 </html>
