images demo update

--- a/cookbook/meal-prep/images/page2.html
+++ b/cookbook/meal-prep/images/page2.html
@@ -25,8 +25,8 @@
             an image from somewhere else on the internet onto 
             our page.
 
-            Go to Google and search for images of a cat or something;
-            encourage the students to google something they enjoy.
+            Go to Google and search for cat pics, or whatever else
+            you'd enjoy putting onto your page.
             
             Once you find something you like, right click on the 
             image and select the "Copy image address" option
@@ -50,7 +50,7 @@
             So we're kinda just stuck with it.
 
             Continue to the next page to see what the second
-            one issue, and how we can address it.
+            issue is, and how we can address it.
         -->
     </body>
 </html>
