--- a/cookbook/meal-prep/images/page3.html
+++ b/cookbook/meal-prep/images/page3.html
@@ -38,13 +38,14 @@
         >
         <!--
             Notice how each attribute has its own line now,
-            in addition the combination of the opening
-            triangle bracket and element name (<img)
+            in addition to the combination of the opening
+            triangle bracket and tag name (<img)
             and the closing triangle bracket (>).
 
             Also notice how the attributes are indented one
             level to the right of the beginning and ending
-            parts of the opening tag.
+            parts of the opening tag (similar to how we
+            indent child elements inside of a parent)
 
             That keeps our code nice and clean, while
             also being clear that each attribute with its
