--- a/cookbook/meal-prep/images/page5.html
+++ b/cookbook/meal-prep/images/page5.html
@@ -18,7 +18,7 @@
 
             But why is it fragile? 
 
-            Well, because your link to that image can break at any
+            Because your link to that image can break at any
             time.  You don't have any control over that image, 
             some other site does.  If they decide to take it down
             or replace it with another, you will no longer have 
