--- a/cookbook/meal-prep/images/page6.html
+++ b/cookbook/meal-prep/images/page6.html
@@ -14,7 +14,8 @@
         <!--
             Next up, google another image you want to add to your page,
             but this time, instead of right-clicking and selecting 
-            "Copy image address", we're going to select "Save image as...".
+            "Copy image address", we're going to select 
+            "Save image as...".
 
             Assuming you've created this demo example in a duplicated
             copy-skeleton template, you should have an 'images' folder
