--- a/cookbook/meal-prep/images/page7.html
+++ b/cookbook/meal-prep/images/page7.html
@@ -28,6 +28,27 @@
             aspect ratio, causing it to squash or stretch.
 
             Also, don't forget to add the alt attribute as well.
+
+            That wraps up this demo!
+        -->
+
+        <!--
+            Rememeber what you learned about HTML Attributes:
+
+            - attributes only live inside the opening tag of
+            an HTML element
+
+            - HTML attributes are composed of three main parts:
+                - the attribute name
+                - the assignment operator (=)
+                - the attribute value (wrapped in double quotes "")
+
+            - you can have multiple attributes in the same element
+
+            - if multiple attributes don't fit on one line,
+            you can break the tag and attributes onto separate lines
+            with the attributes indented, similar to how we should
+            indent children within their parents
         -->
     </body>
 </html>
