anchors and 11/8 agenda

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -61,41 +61,38 @@
         </style>
     </head>
     <body>
-        <h1>GDWD 108 Agenda for October 23<sup>rd</sup></h1>
+        <h1>GDWD 108 Agenda for December 8<sup>th</sup></h1>
         <div id="agenda">
         <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
         <h2>Announcements (6:10)</h2>
         <h3>(if you're not here by 6:10, you're tardy!)</h3>
         <h2>
-            Period 1 (6:00-7:10): 
-            <br><span class="indent">Kahoot - HTML Children</span>
-            <br><span class="indent">Intro to Week 1 Project - HTML Potluck</span>
+            Period 1 (6:00-8:30): 
+            <br><span class="indent">Final Exam</span>
+            <br><span class="indent">Intro to JS Function Game</span>
         </h2>
-        <h3>SHORT BREAK (10 MIN)</h3>
-        <h2>Period 2 (7:20-8:30): Lab Time - HTML Potluck</h2>
+        <!-- <h3>SHORT BREAK (10 MIN)</h3>
+        <h2>Period 2 (7:20-8:30): Lab Time - HTML Potluck</h2> -->
         <h3>DINNER BREAK (45 MIN)</h3>
         <h2>
-            Period 3 (9:15-11:00): 
-            <br><span class="indent">Quiz 1 - HTML Fundamentals
-            <br><span class="indent">PowerPoint - Intro to CSS
-            <br><span class="indent">Demo - CSS Colors and Text Styling
-            <br><span class="indent">Exercise - Color Palettes (???)
+            Period 2 (9:15-11:00): 
+            <br><span class="indent">Lab Time</span>
         </h2>
         </div>
 
         <h1>Assignments, Deliverables &amp; More</h1>
         <div id="agenda">
-        <h2 class="assnItem highlight">
-            <span>HTML Potluck | Project</span>
-            <span>Due TONIGHT at after the dinner break</span>
-        </h2>
-        <h2 class="assnItem highlight">
-            <span>Quiz 1 - HTML Fundamentals</span>
-            <span>After the dinner break</span>
-        </h2>
-        <h2 class="assnItem">
-            <span>Color Palette | Exercise</span>
-            <span>MAYBE due tonight at 11pm???</span>
+            <h2 class="assnItem highlight">
+                <span>FINAL EXAM</span>
+                <span>Beginning of class</span>
+            </h2>
+            <h2 class="assnItem highlight">
+                <span>JS Function Game | Exercise</span>
+                <span>Due TONIGHT at 11pm</span>
+            </h2>
+        <h2 class="assnItem warning">
+            <span>RESUBMISSIONS FOR ANYTHING ELSE</span>
+            <span>Due tonight at 11pm</span>
         </h2>
         </div>
 
