--- a/cookbook/meal-prep/anchors/page1.html
+++ b/cookbook/meal-prep/anchors/page1.html
@@ -19,18 +19,23 @@
             call them "hyperlinks", but even better to call
             them what they are: anchor elements.
         -->
+
         <!--
             Anchor elements can be used in two different ways:
             to hyperlink off the page to another website,
-            or to jump to another part of the same page.
+            or to hyperlink to another part of the same page.
 
             The first way tends to be easier to understand,
             so we'll demo that first.
 
-            First, create an anchor with a call-to-action (CTA)
+            First, create a heading to label the examples
+            we're about to create.
+            
+            Then create an anchor with a call-to-action (CTA)
             inside of it (i.e. include a verb instructing
             the user to take some kind of action)
         -->
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <a>Click me to go to Google's homepage</a>
     </body>
 </html>
