--- a/cookbook/meal-prep/anchors/page2.html
+++ b/cookbook/meal-prep/anchors/page2.html
@@ -6,6 +6,7 @@
         <title>Anchors (Links) Demo</title>
     </head>
     <body>
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <!--
             That put some text on the page...but that's it.
             There's nothing indicating that it's a hyperlink, and
