--- a/cookbook/meal-prep/anchors/page3.html
+++ b/cookbook/meal-prep/anchors/page3.html
@@ -6,6 +6,7 @@
         <title>Anchors (Links) Demo</title>
     </head>
     <body>
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <!--
             If we want to be really fancy, we could even instruct
             the browser to open this hyperlink in a new tab
