--- a/cookbook/meal-prep/anchors/page8.html
+++ b/cookbook/meal-prep/anchors/page8.html
@@ -6,6 +6,7 @@
         <title>Anchors (Links) Demo</title>
     </head>
     <body>
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <a href="https://www.google.com" target="_blank">
             Click me to go to Google's homepage
         </a>
