--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -60,23 +60,21 @@
             }
         </style>
     </head>
-    <body>
+    <body style="padding:24px;">
         <h1>GDWD 105 Agenda for December 8<sup>th</sup></h1>
         <div id="agenda">
         <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
         <h2>Announcements (6:10)</h2>
         <h3>(if you're not here by 6:10, you're tardy!)</h3>
         <h2>
-            Period 1 (6:00-8:30): 
-            <br><span class="indent">Final Exam</span>
-            <br><span class="indent">Intro to JS Function Game</span>
+            Period 1 (6:00-8:30): Final Exam & Intro to JS Function Game</span>
         </h2>
         <!-- <h3>SHORT BREAK (10 MIN)</h3>
         <h2>Period 2 (7:20-8:30): Lab Time - HTML Potluck</h2> -->
         <h3>DINNER BREAK (45 MIN)</h3>
         <h2>
             Period 2 (9:15-11:00): 
-            <br><span class="indent">Lab Time</span>
+            <span >Lab Time</span>
         </h2>
         </div>
 
@@ -91,7 +89,7 @@
                 <span>Due TONIGHT at 11pm</span>
             </h2>
         <h2 class="assnItem warning">
-            <span>RESUBMISSIONS FOR ANYTHING ELSE</span>
+            <span>RESUBMISSIONS FOR FINAL PROJECT</span>
             <span>Due tonight at 11pm</span>
         </h2>
         </div>
