--- a/cookbook/meal-prep/anchors/page7.html
+++ b/cookbook/meal-prep/anchors/page7.html
@@ -59,7 +59,8 @@
             We're going to add line break elements <br> to 
             artificially lengthen the page.  
 
-            Tell the students to NEVER EVER do this in real code.  
+            NEVER EVER do this in real code.  
+            
             The only reason we're doing it here is because we 
             don't know CSS yet, and it would overcomplicate the demo 
             to add hundreds of lines of lorem ipsum to fill the page.
