--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -157,13 +157,8 @@
                                         <ul>
                                             <li>
                                                 If choosing this approach, just 
-                                                enter "FIRST" for the 
-                                                <b>Company Name</b> field
-                                                (it doesn't really matter)
-                                            </li>
-                                            <li>
-                                                And use your personal email 
-                                                address for the <b>Work Email</b>
+                                                use your personal email 
+                                                address for the <b>Email</b>
                                                 field
                                             </li>
                                         </ul>
@@ -174,49 +169,19 @@
                                     </li>
                                 </ul>
                             </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/pantheon-wordpress-setup/02_pantheon_signup.png" 
-                                alt="Fill out the required data fields to create your account, or use Google to sign up"
-                            >
-                            <figcaption>
-                                Fill out the required data fields to create 
-                                your account, or use Google to sign up
-                            </figcaption>
-                        </div>
-                    </div>
-                    <div class="sideBySide">
-                        <div class="textContainer">
                             <p>
-                                Sometimes Pantheon glitches out if you choose 
-                                Method #1 to sign up.  (It's not because of 
-                                anything you did wrong.)
-                            </p>
-                            <p>
-                                If this happens, you'll be brought to a
-                                different page to fill out an alternate 
-                                "backup" form.
-                            </p>
-                            <p>
-                                If you go with Method #1 again, fill out 
-                                the data fields once more, and click the 
-                                yellow "Create Account" button, it should 
-                                work this time.
-                            </p>
-                            <p>
-                                Alternatively, you could also change your mind 
-                                and use your Google account to sign up as well.
+                                Choose whichever method you're most 
+                                comfortable with.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
                                 src="images/pantheon-wordpress-setup/02_pantheon_signup_2ndattempt.png" 
-                                alt="This is the 'backup' form for if something goes wrong on the first sign up page"
+                                alt="Fill out the required data fields to create your account, or use Google to sign up"
                             >
                             <figcaption>
-                                This is the 'backup' form for if something 
-                                goes wrong on the first sign up page
+                                Fill out the required data fields to create 
+                                your account, or use Google to sign up
                             </figcaption>
                         </div>
                     </div>
