simplified image demo

--- a/cookbook/meal-prep/images/page4.html
+++ b/cookbook/meal-prep/images/page4.html
@@ -26,11 +26,7 @@
             A screen reader can't "read" an image, but it can
             read out the alt attribute value.
         -->
-        <img 
-            src="https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&quality=85&auto=format&fit=max&s=a52bbe202f57ac0f5ff7f47166906403"
-            width="500"
-            alt="an adorable, yet concerned looking cat"
-        >
+        <img src="images/egypt-kitty.webp" width="500" alt="a fancy exotic cat wearing an egyptian outfit">
         <!--
             You can check out that the alt attribute works
             by deleting a random character from your src
@@ -42,6 +38,10 @@
             After confirming this, undo the code change 
             you made to your src attribute with Cmd+Z
             (or Ctrl+Z for PC users).
+
+            Going forward, we will ALWAYS expect to see
+            alt attributes on your images; if you don't,
+            YOU WILL LOSE POINTS on your assignments!!!
         -->
     </body>
 </html>
