--- a/cookbook/meal-prep/images/page1.html
+++ b/cookbook/meal-prep/images/page1.html
@@ -17,7 +17,7 @@
             to our page. Note that the tag name for the
             image element is just "img".
 
-            Note that the image element is another of the
+            Also note that the image element is one of the
             "void" elements, which doesn't have a closing 
             tag, nor does it accept children.
         -->
