--- a/cookbook/meal-prep/lists/page3.html
+++ b/cookbook/meal-prep/lists/page3.html
@@ -18,9 +18,20 @@
             Note that each list item gets its own line, because
             list items are "block" elements.
 
-            In addition to that, they also get their own number
-            in front of them, but the number increments each 
-            time compared to the list item before it.
+            "block" elements are part of a broader web dev
+            concept known as "Document Flow", which we'll be
+            learning about more next week, but in short,
+            "block" elements are containers for content
+            that take up an entire line on the page (or
+            inside their own container).
+
+            In addition to that, these list items also get 
+            their own number in front of them.
+            
+            Notice how the number increments each time 
+            compared to the list item before it.
+
+            That's the magic of the Ordered List element!
         -->
     </body>
 </html>
